@@ -1,12 +1,12 @@
 <!--
     Copyright (c) 2017 Intuit
-   
+
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
-   
+
     	http://www.apache.org/licenses/LICENSE-2.0
-   
+
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -35,6 +35,12 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>2.9.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<version>1.39</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
@@ -54,7 +60,7 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
         	</plugin>
-			<!-- This plug-in instructs to use the mentioned JDK for compilation Reference:- 
+			<!-- This plug-in instructs to use the mentioned JDK for compilation Reference:-
 			http://maven.apache.org/plugins/maven-compiler-plugin/examples/compile-using-different-jdk.html -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -136,6 +142,16 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<configuration>
+					<argLine>
+						-Djdk.attach.allowAttachSelf <!-- required to run test with jmockit on JDK 9 -->
+					</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
